# aoe2coach

./: .gitignore  README.md  automator.py  calibrate.py  chain_reader.py  coach.py  diagnose.py  find_by_values.py  find_player.py  find_resource_chain.py  main.py  memory_reader.py  offsets.json  overlay.py  pointer_scan.py  probe_player.py  requirements.txt  scan_resources.py
scanner/: CMakeLists.txt  build.bat  scanner.cpp
